# ChangeLog for app-text/mupdf
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/mupdf/ChangeLog,v 1.113 2014/12/30 19:50:30 maekke Exp $

  30 Dec 2014; Markus Meier <maekke@gentoo.org> mupdf-1.4-r1.ebuild:
  arm stable, bug #533504

  09 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> mupdf-1.3_p20140118.ebuild:
  x86 stable wrt bug #472532

*mupdf-1.5-r1 (10 Oct 2014)

  10 Oct 2014; Michael Weber <xmw@gentoo.org>
  +files/mupdf-1.5-old-debian-files.patch, +mupdf-1.5-r1.ebuild,
  -mupdf-1.5.ebuild, mupdf-9999.ebuild:
  Fix .desktop file (bug 524376, thanks Dirk Sondermann).

  09 Sep 2014; Markus Meier <maekke@gentoo.org> mupdf-1.3_p20140118.ebuild:
  arm stable, bug #472532

  27 Aug 2014; Agostino Sarubbo <ago@gentoo.org> mupdf-1.3_p20140118.ebuild:
  Stable for ppc, wrt bug #472532

  25 Aug 2014; Michael Weber <xmw@gentoo.org>
  +files/mupdf-1.5-openjpeg-2.1.patch, mupdf-1.5.ebuild, mupdf-9999.ebuild:
  Fix for openjpeg-2.1 (bug 520774).

  25 Aug 2014; Michael Weber <xmw@gentoo.org> mupdf-1.1_p20121127.ebuild,
  mupdf-1.3_p20140118.ebuild, mupdf-1.4-r1.ebuild, mupdf-1.5.ebuild:
  Restrict openjpeg-2.1 (bug 520774).

*mupdf-1.4-r1 (21 Jul 2014)
*mupdf-1.5 (21 Jul 2014)

  21 Jul 2014; Michael Weber <xmw@gentoo.org>
  +files/mupdf-1.5-Makerules-openssl-curl.patch, +mupdf-1.4-r1.ebuild,
  +mupdf-1.5.ebuild, -mupdf-1.4.ebuild, metadata.xml, mupdf-9999.ebuild:
  Fix USE=-X for >1.4 (bug 514202, thanks patrick) and .so names, Version bump
  to 1.5, USE=openssl and curl for >=1.5.

  05 Jun 2014; Michael Weber <xmw@gentoo.org>
  +files/mupdf-1.4-old-debian-files.patch, mupdf-9999.ebuild:
  adept to upstream commit b2f7be48 (thanks Shark, bug 511436)

  05 Jun 2014; Michael Weber <xmw@gentoo.org> mupdf-1.2.ebuild,
  mupdf-1.3_p20140118.ebuild, mupdf-1.4.ebuild, mupdf-9999.ebuild:
  Fix typo EROOR->EROOT

  23 Apr 2014; Michael Weber <xmw@gentoo.org> mupdf-9999.ebuild: