@@ -23,18 +23,20 @@ DIST mupdf-1.2-source.zip 13808821 SHA256 9bc9e31ec27c091dad37f70940bd799e46ab6d
 DIST mupdf-1.3_p20140118.tar.gz 7448663 SHA256 ed1791966a60be0d8556cf5e0def0e3093867223f0eb4f12fbffd22804520882 SHA512 c159f58539f1e944608ff7da8f41cef5e955de2f21ab1e37a6fad5577134094186a8b8b7ecdf47a427547e3fde7f04f2d484da6709adf3859c3754e2774b6a56 WHIRLPOOL b24bbbd49921edcea93a80a597bb0139937ac1ef365ae63f83cf7df878586ed2a9ecbef65645b9562627fa2bc2a662991a1af1ffd99e10f10a351bccb951eebe
 DIST mupdf-1.4.tar.gz 7470075 SHA256 ccac5ad1129f051dbaecbeec01b85f548c8bdb1c97b5e1dd397299bf7f988438 SHA512 6de95fa02e3ebaf2f268765df7eb4c1b53ef0b3b39b57b8e64097c429727dd483894e3a62c520151197290a8e392b9b1746109fc3eb528b44245040acc82a25e WHIRLPOOL a43ab9bbaf5cd5e40445ace3fdeb9e0b57e4924c7e9a7669899275da2c8a41725d862fb1cd85d779852ec794be8184b7d21aaee932024d7d0557e076de6611a4
 DIST mupdf-1.5.tar.gz 7485699 SHA256 946393c7abf78e50fa9815f18a9e91f275a1a96a7ea14ae39b5237944070d1f5 SHA512 bfb79838eba629295ab164cf37e49edc8846689598fbad9312409535022a2e747bd062718b899909564c6cf5826fb46a2b4b579ced8c7a3896d6098e7e5ccf40 WHIRLPOOL ebcaf5f677984a78aecf9eeb72e7a79e6e2a6388db5024427d8bf55f31b3690844dd291ada3cd578a5bb9a370ea21cb2a044656c21a0ef47cdf7bfc42c842beb
+DIST mupdf-1.6.tar.gz 8188199 SHA256 ac6f64d5c287b6549d3c26af8fa298c91697f10ebe52b122ba2c1f43e5ccfa52 SHA512 cda47ef4442bb7de15fc54b87e0e819f80c56c144318b9e953bc36c3da0bb331a10f44016bc89986c317828b7043e737a89556fc51158114b1da58cd8f7977c7 WHIRLPOOL ea14db6f43a70df144f3f70c3421ac7d2096d835fa222f0d5b9c6d64214f5c9156884b6660dda7e1fd2bee83fa9ce66ca25b2f6290ba1588fc55035ad6228413
 EBUILD mupdf-1.1_p20121127.ebuild 1488 SHA256 a08ee7cf473fdc0dc524ae23356484895c4402a81ff3eaf8d6763a9839374154 SHA512 eb6fe8166278ba1c013b4b5469f14ff99ea430d4f5102318856e2197ae4121e1fa26d95764f7128f6291ae6835e52056484ed9af89cfacc2ac3fb7ba4a244fd1 WHIRLPOOL 1a3404dc724d8c12a00275b90e515614fcba4893cc1cd3e341e9068b4c61378270063bb766d4051be2d410863893610240d30d7ed86ad09de913c7a6520e9e0b
 EBUILD mupdf-1.2.ebuild 3259 SHA256 00fa6f25eceae7e70590e37dc6173830d3042fc7ce4ae24f4969f3dbf3ac17cc SHA512 495388528ca026e6d5b1b33e0b7449c48c34006791bd969cd181757175928e7003a4cb0f72839627442feee1eaee49065f0db68e4cf11912da2c970e5d8f32bf WHIRLPOOL 0c010b3dee2bb4378f96b95637867a88d139f9f7dbdf083705a1fbd7491849556f7721ee49cef0afcaf8cedd2793c17df6c14e08a919e875eeb23debfb4820ba
 EBUILD mupdf-1.3_p20140118.ebuild 3883 SHA256 dc26c2f86c130675f88b11d5e7ba268cd5af8afba5c24c439739dd1495fddad2 SHA512 53c7e2d290479211cf9a200d005503016cb0e0fb021d82e91f17f1fe0a0536f8501bec1486883d2592e6a3cabd3f28f7868c4fa06d30e02d172894b2209debcb WHIRLPOOL 90100b4fddc559f2f3afb3ff9f1fe20ca1953c746c3af974d008f518cda1f256b5522fab9d6dce82ed8e27dfdda28f2a6f09efc9cb228a049f04a32a7301d53f
 EBUILD mupdf-1.4-r1.ebuild 3868 SHA256 c671fef8c67125a739cf0be6e7c7408de3e044d55bc4234a1de33c3f9fd30b67 SHA512 832b65b05a3a36c6dcc4db99d0dd8cc9e05fda897840346f95b694d54f3cd894d688d83ac86b915134cf91c81f3e06c72f1a6438eec73c61765107a8d247afd0 WHIRLPOOL 6ec86b3a2022b6bdb2549a1f9c722cf97a3f54b56c4b157c2c7769128c55e4759cffa1e0f57bbe1504e8993eef0da6435356f2db6aab0288766245af4562189f
-EBUILD mupdf-1.5-r1.ebuild 3949 SHA256 60c36bf1f5f107059cbaff9fb79c25e7f4fbc817d4ae6d939efcded7ce4da68e SHA512 1053bdb2ff8c6b869caa1fbb03d7d49fd55c0fc904c3e0a659af80b0c6902293f5b7059bda73d37aa017148828533592e72124633f5aa32172a3f0a74e463ba7 WHIRLPOOL 4ca29b2b67fd015bda4300d7ec83305cfb133cca28954471b24aa1ed881fddf2893ea20223925a4eb1f67c5a6f1b15a1f9cb9e3e41cb0ed402e6fe4f412c1388
-EBUILD mupdf-9999.ebuild 3788 SHA256 e39e3444eccb3928d2ba7436039ffda914ec78ec45cefe3a112fd5bbc25c6bad SHA512 a73dbdb0cf1416025f60a1699cc9a6bca216224ff12b0532816a952cfcbbe988d3eb26d7141de7a6bef12b236f14f5922f661bb3770e0d565ef2746804a8f29d WHIRLPOOL 5fdccabf3f7e7b3726e05ca3a492b73184d8c18faef22f34f2b73b33b762666fc19c1903164932881fbcb3956138aa9deb89747e95e1df5edc1f6839d725228a
-MISC ChangeLog 17666 SHA256 7ce45814e874e64d1e26db5e8fa5e4fe862452435f3ed730c7fc2db1e1b0a326 SHA512 ea2002303520fc001db5a98fd5c9521c0cfaccf55178d175be2b55b08b8f7482b1f2f3aba254b84f6b7cfd6930e42ef2333119a606b1dfe4f6a41ca7bf93d44e WHIRLPOOL 891b2c76ca99a31d30df34acbc8a435ca02444965ec1af2de946cfdbcc4433d2fc940beaf9c5246570d60ccdab131e1b0a3726c7deda35ddf5835b62c37783d6
+EBUILD mupdf-1.5-r1.ebuild 3994 SHA256 5a2927d239c1f6a43671dfde22c9582af6d4519b1b65c16d57b8f3d98a177ba9 SHA512 3607d22378411a6b07d18db7fee85845bf42d21dffe4ef37312ce470fe71200426b132149a2c1274f866f6db7e7c623d7098a76191b665a920e1019c028094ed WHIRLPOOL d65bb6192a8b9e27dd57e61ef5dddcba926475fdc411465d4ea04548fed947cbeefa45f1e3f651b52d3fac580d9922076de35bbc0ae8d8e3d17438ff3cdcba30
+EBUILD mupdf-1.6.ebuild 3991 SHA256 09079463c97cbfe1b8a5b67075da0239adb4ae3fd3f17e34e0aa0da1e85ba87e SHA512 ab8992565e41c9dcb5b60d273ae1bde3b22bf4ce2d691952bb9a0a03098d1d535403bbcd89874c2bba2a48796b9f85a597ced57e0f6895fb0ca75e0f144e5165 WHIRLPOOL 8f05ec8e1ad9ed46c650f8e0c73027e35fdeac7ccd57fe0db25fc196e59528b462f3ec17f4c7ffce9e8151e80ed9063886e608710bd09a17d245be5a2f7bdee7
+EBUILD mupdf-9999.ebuild 3833 SHA256 08dc38fb359d26da7043c60ce98dd75f188f003551f92273e3edcf28f1c5d77b SHA512 67e056c1bf5c01f1016e8f8f1f7952c294694980a79a3504c4aa2cde48b97bafe2e3f46d4352467430eb4ac496c0f3dfe4bd958f866318549655ac3c695c2c20 WHIRLPOOL ee1d09685c9ffcc4128564d63eeb1ff953c0f7f9c9bedb7ce2226fa7d0e402de011881a0b40a8dac5b9d6ed37f23e923a512ba4e5d79e1abb5f7459c74e7f8d1
+MISC ChangeLog 17997 SHA256 7d9f2f22721ea557347a0dd52951d62ce82c6d38b716d054305cf3be1dd19152 SHA512 6a6005b4b34f8bed477e8e43a633eb58e05fef31e32eb5d47f959433aaf8febd6ab83b6091c43ebdb81979a6459771e41472af3c085207b765ff3c54a3f35148 WHIRLPOOL 0fcfb8e3969c363e2d48101b6aee16f3f82fe26d8d5322b37c36a948982c7547375404d52284ae0df36acbd8764dffabd0ad98ba8b053b206531695f87ca6eaa
 MISC metadata.xml 302 SHA256 bde1ed5d5b77f24350d5708444153fdfc15593205bfbc58f115d2b7e292d404b SHA512 4c1b0f1ba4c185f0d80e10b094cbb41e8467308367bc6d37f51d82aba522c7d60189f3c6efa22f433d7ce25ec77ac25e9a5fdb9b00aef31c9e3fc1dd00fdbc08 WHIRLPOOL cf4814a563fd457b6e2979939fe693d765a6b87465f66ee9883c3d06723122dfe8de59e96055d7acbd8924d4d61f8627a704289e3bcc0c01a4742426780931b6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSjAgsACgkQkKaRLQcq0GJFEwCeNo4hwFJOgFmLT2jvvs5deRMU
-+EcAnjv7gF5H41kVd1FgpEqNrib07NC7
-=QHf4
+iF4EAREIAAYFAlTvJWoACgkQknrdDGLu8JA/QQEAlKiQ0K0gHCKpbb+aWzDdoTyK
+JXyZNYp4Eas89k+9KtgA/AlR7bHNJ2MvWyzMUghC/G9Ay4vn3aiDaTYICI9erAv+
+=9fLS
 -----END PGP SIGNATURE-----
