@@ -7,7 +7,7 @@ IUSE=X vanilla +curl +openssl static static-libs
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~ppc-macos ~x64-macos ~x86-macos
 LICENSE=AGPL-3
 RDEPEND=dev-libs/openssl[static-libs?] media-libs/freetype:2[static-libs?] media-libs/jbig2dec[static-libs?] media-libs/openjpeg:2[static-libs?] net-misc/curl[static-libs?] virtual/jpeg[static-libs?] X? ( x11-libs/libX11[static-libs?] x11-libs/libXext[static-libs?] )
-SLOT=0/1.5
-SRC_URI=http://git.ghostscript.com/?p=mupdf.git;a=snapshot;h=b2f096de23e5341fbbcd7c290f3a144423741906;sf=tgz -> mupdf-1.5.tar.gz
+SLOT=0/1.6
+SRC_URI=http://git.ghostscript.com/?p=mupdf.git;a=snapshot;h=9268b59ffcb5e5a276324d692c9d63c0e2f1e3ce;sf=tgz -> mupdf-1.6.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66
-_md5_=77b7b330b65786a719f6b2d8694adb59
+_md5_=ebb9a5bbee548e8f018da665f62d163e
