@@ -6,6 +6,6 @@ HOMEPAGE=http://mupdf.com/
 IUSE=X vanilla curl openssl static static-libs
 LICENSE=AGPL-3
 RDEPEND=dev-libs/openssl[static-libs?] media-libs/freetype:2[static-libs?] media-libs/jbig2dec[static-libs?] media-libs/openjpeg:2[static-libs?] net-misc/curl[static-libs?] virtual/jpeg[static-libs?] X? ( x11-libs/libX11[static-libs?] x11-libs/libXext[static-libs?] )
-SLOT=0/1.5
+SLOT=0/1.6
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	git-2	e28f0d8a9b321431b1e699782851b827	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=99dea73972f801743d021c91dff2b3d4
+_md5_=1f268fd74f08e34731a2949d46ede0b7
