@@ -1,6 +1,15 @@
 # ChangeLog for app-text/mupdf
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/mupdf/ChangeLog,v 1.113 2014/12/30 19:50:30 maekke Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/mupdf/ChangeLog,v 1.115 2015/02/26 13:53:42 xmw Exp $
+
+*mupdf-1.6 (26 Feb 2015)
+
+  26 Feb 2015; Michael Weber <xmw@gentoo.org> +mupdf-1.6.ebuild,
+  mupdf-1.5-r1.ebuild, mupdf-9999.ebuild:
+  Version bump (thanks sping, bug 526508), update ebuilds.
+
+  26 Feb 2015; Michael Weber <xmw@gentoo.org> mupdf-1.5-r1.ebuild:
+  Drop COPYING and force /usr/share/doc/${PF} (thanks Roger, bug 526508)
 
   30 Dec 2014; Markus Meier <maekke@gentoo.org> mupdf-1.4-r1.ebuild:
   arm stable, bug #533504
